--- a/index.html
+++ b/index.html
@@ -43,45 +43,53 @@
 
     </header>
 
-   
-        <section class="about" id="about">
-            <div class="about-wrapper orange container">
-                <div class="about-col">
-                    <h2>Just the right food</h2>
-                    <div class="icon-Orange-line decoration"></div>
-                    <p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers
-                        coming
-                        back
-                        for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet
-                        coffees
-                        make us hard to resist! Stop in today and check us out!</p>
-                    <img src="img/cook.png" alt="">
-                </div>
-                <div class="about-img"><img src="img/dish.png" alt=""></div>
+
+    <section class="about" id="about">
+        <div class="about-wrapper orange container">
+            <div class="about-col">
+                <h2>Just the right food</h2>
+                <div class="icon-Orange-line decoration"></div>
+                <p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers
+                    coming
+                    back
+                    for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet
+                    coffees
+                    make us hard to resist! Stop in today and check us out!</p>
+                <img src="img/cook.png" alt="">
             </div>
-        </section>
+            <div class="plate-img"><img src="img/dish.png" alt=""></div>
+        </div>
+    </section>
 
-        <section class="ingredients white" id="ingredients">
-            <div class="container ">
-                <div class="ingredients-wrapper">
-                    <h2>Fine ingredients</h2>
-                    <div class="icon-white-line decoration"></div>
-                    <p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers
-                        coming back
-                        for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet
-                        coffees
-                        make us hard to resist! Stop in today and check us out!</p>
-                    <div class="ingredient-image">
-                        <img src="img/ingredients-image.png" alt="">
-                        <img src="img/ingredients-image2.png" alt="">
-                        <img src="img/ingredients-image3.png" alt="">
-                    </div>
+    <section class="ingredients white" id="ingredients">
+        <div class="container ">
+            <div class="ingredients-wrapper">
+                <h2>Fine ingredients</h2>
+                <div class="icon-white-line decoration"></div>
+                <p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers
+                    coming back
+                    for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet
+                    coffees
+                    make us hard to resist! Stop in today and check us out!</p>
+                <div class="ingredient-image">
+                    <img src="img/ingredients-image.png" alt="">
+                    <img src="img/ingredients-image2.png" alt="">
+                    <img src="img/ingredients-image3.png" alt="">
+                </div>
+                <div class="popup-text-ingredients">
+                    <p> &#10003; Canary grass</p>
+                    <p> &#10003; Whole Grain Stamp</p>
+                    <p> &#10003; Dactyloctennium aegyptium</p>
+                    <p> &#10003; Algal food ingredients</p>
+                    <p> &#10003; Whole Grain Stamp
+                        &#8864;</p>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+    <section class="menu" id="menu">
 
-        <section class="menu-list orange" id="menu">
-
+        <div class="menu-list orange">
             <div class="appetisers">
                 <h2>Appetisers</h2>
                 <div class="icon-Orange-line decoration"></div>
@@ -195,16 +203,20 @@
                     </tr>
                 </table>
             </div>
-            </div>
-        </section>
+        </div>
+        </div>
+
+    </section>
 
 
 
-        <section class="reviews white" id="reviews">
-            <div class="container">
+    <section class="reviews white" id="reviews">
+        <div class="container">
+            <div class="reviews-wrapper">
                 <h2>Guest Reviews</h2>
                 <div class="icon-white-line decoration"></div>
-                <p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming
+                <p><img src="img/“.png" width="34.5px" height="25.49px" class="quote">If you’ve been to one of our
+                    restaurants, you’ve seen – and tasted – what keeps our customers coming
                     back
                     for
                     more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees
@@ -212,36 +224,36 @@
                     hard to resist! Stop in today and check us out!</p>
                 <p>- food inc, New York</p>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="reservations orange" id="reservation">
-            <div class="reservations-wrapper container">
-                <div class="reservations-images"><img src="img/reservations-img.png" alt=""></div>
-                <div class="booking">
-                    <h2>Just the right food</h2>
-                    <div class="icon-Orange-line decoration"></div>
-                    <p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers
-                        coming
-                        back
-                        for more. Perfect materials and freshly baked food.</p>
-                    <p>Delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist! Stop in today and
-                        check
-                        us
-                        out! Perfect materials and freshly baked food.</p>
+    <section class="reservations orange" id="reservation">
+        <div class="reservations-wrapper container">
+            <div class="reservations-images"><img src="img/reservations-img.png" alt=""></div>
+            <div class="booking">
+                <h2>Just the right food</h2>
+                <div class="icon-Orange-line decoration"></div>
+                <p> If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers
+                    coming
+                    back
+                    for more. Perfect materials and freshly baked food.</p>
+                <p>Delicious Lambda cakes, muffins, and gourmet coffees make us hard to resist! Stop in today and
+                    check
+                    us
+                    out! Perfect materials and freshly baked food.</p>
 
-                    <form class="wrapper-form" action="" id="booking-form">
-                        <label for="name">Name</label> <input type="text" id="name" required placeholder="your name">
-                        <label for="email">Email</label><input type="email" id="your email" required
-                            placeholder="email">
-                        <label for="date"> Date</label> <input type="date" id="date" placeholder="date">
-                        <label for="number" id="label-number">Party number</label><input type="number" min="0" max="100"
-                            step="1" id="number" placeholder="party number">
-                    </form>
-                    <button class="btn-reservations" type="submit" id="booking-form">Book rows!</button>
-                </div>
+                <form class="wrapper-form" action="" id="booking-form">
+                    <label for="name">Name <input type="text" id="name" required placeholder="your name"></label>
+                    <label for="email">Email<input type="email" id="your email" required placeholder="email"></label>
+                    <label for="date"> Date<input type="date" id="date" placeholder="date"></label>
+                    <label for="number"></label> id="label-number">Party number<input type="number" min="0" max="100"
+                        step="1" id="number" placeholder="party number"></label>
+                </form>
+                <button class="btn-reservations" type="submit" id="booking-form">Book rows!</button>
             </div>
-        </section>
-   
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="about">
             <div class="icon-white-line">
